-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.12
-
None
-
Android X86, clang
-
-
e06c207c066b4a5b469945ae9a8a7cc79682103e (qt/qtmultimedia/wip/qt6) f41819387531a5ddfbad2e80ceec7b57a5ebb7c6 (qt/qtmultimedia/wip/qt6)
tst_QCameraBackend: 6 failed
FAIL! : tst_QCameraBackend::testCameraStates() Compared values are not the same
agent:2019/02/05 00:03:01 build.go:192: Loc: [tst_qcamerabackend.cpp(219)]
FAIL! : tst_QCameraBackend::testCameraStartError() Compared values are not the same
agent:2019/02/05 00:03:01 build.go:192: Loc: [tst_qcamerabackend.cpp(265)]
FAIL! : tst_QCameraBackend::testCaptureMode() Compared values are not the same
agent:2019/02/05 00:03:01 build.go:192: Actual (camera.captureMode()) : 0
agent:2019/02/05 00:03:01 build.go:192: Expected (QCamera::CaptureStillImage): 1
agent:2019/02/05 00:03:01 build.go:192: Loc: [tst_qcamerabackend.cpp(284)]
FAIL! : tst_QCameraBackend::testCameraCapture() '(imageCapture.isReadyForCapture())' returned FALSE. ()
agent:2019/02/05 00:03:01 build.go:192: Loc: [tst_qcamerabackend.cpp(373)]
FAIL! : tst_QCameraBackend::testCaptureToBuffer() '(imageCapture.isReadyForCapture())' returned FALSE. ()
agent:2019/02/05 00:03:01 build.go:192: Loc: [tst_qcamerabackend.cpp(433)]
FAIL! : tst_QCameraBackend::testVideoRecording(Rear-facing camera) 'recorder.status() == QMediaRecorder::LoadingStatus || recorder.status() == QMediaRecorder::LoadedStatus' returned FALSE. ()
agent:2019/02/05 00:03:01 build.go:192: Loc: [tst_qcamerabackend.cpp(664)]
Coin build:
https://testresults.qt.io/coin/integration/qt/qt5/tasks/nightly_1550367792
- is required for
-
QTBUG-73514 Fix qtmultimedia tests for android
-
- Closed
-
| For Gerrit Dashboard: QTBUG-73582 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 256974,11 | Android: Don't postpone setting of camera's state | 5.12 | qt/qtmultimedia | Status: MERGED | -2 | 0 |
| 257226,11 | Android: Don't open camera if it was already opened | 5.12 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 257330,2 | Android: Use CaptureStillImage as default capture mode | 5.12 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 257377,4 | Android: Fix tst_QCameraBackend to wait for imageCaptured | 5.12 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 257386,3 | Android: Fix tst_QCameraBackend to find FinalizingStatus | 5.12 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 257393,3 | Android: Fix status of QMediaRecorder after start/stop | 5.12 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 257401,2 | WIP Android: Set UnloadedStatus when stopping or capture mode is not video | 5.12 | qt/qtmultimedia | Status: ABANDONED | -2 | 0 |
| 257426,7 | Android: Allow starting camera without viewfinder available | 5.12 | qt/qtmultimedia | Status: MERGED | +2 | 0 |